Profile page header CSS fixes.  Fixed to look great on small browsers

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -73,13 +73,8 @@ body {
 	background-color: $primary-background-color;
 	background-image: none;
 	position: relative;
-	font-family: 'Open Sans', sans-serif;	
-	//font-size: 100%;
+	font-family: 'Open Sans', sans-serif;
 	overflow-x: hidden;
-
-	@media (max-width: 400px) {
-		padding-top:40px;
-	}
 }
 
 html, body { height: 100%; width: 100%}
